cabal-version:      2.4
name:               101Companies
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             rbonifacio
maintainer:         rbonifacio123@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library myfirstapp-lib
  exposed-modules:
    Syntax
    Sample
    HaskellEncoder
    HaskellDecoder

  build-depends:
    , base      
    , casing
    , containers 
    , haskell-src-exts
    , prettyprinter
    , syb   
    , aeson
    , text  
  hs-source-dirs:   src
  default-language: Haskell2010
    
executable myfirstapp
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
     , base 
     , aeson
     , aeson-pretty
     , text
     , bytestring
     , myfirstapp-lib
    hs-source-dirs:   app
    default-language: Haskell2010
